# CoreNum

./: .gitignore  LICENSE  README.md  pyproject.toml
corenum/: __init__.py  linalg.py  random.py  stats.py  strides.py  utils.py
tests/: test_linalg.py  test_stats.py  test_strides.py
