[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "corenum"
version = "0.1.0"
description = "A high-performance numerical computing and linear algebra library."
authors = [
    { name = "Midnxght" }
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20.0"
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0"
]